--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,10 @@
 ---
-import MainNab from '../components/MainNab.astro';
-import Footer from '../components/Footer.astro';
+import MainNab from '../Sections/MainNab.astro';
+import Footer from '../Sections/Footer.astro';
+import Contact from '../Sections/Contact.astro';
 
+
+const {title = 'tastyFood'} = Astro.props; 
 ---
 
 <!doctype html>
@@ -13,15 +16,15 @@ import Footer from '../components/Footer.astro';
 		<meta name="generator" content={Astro.generator} />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-        <script src="https://cdn.tailwindcss.com"></script>
-		<title>tastyFood</title>
+		<title>{title}</title>
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.css">
 	</head>
 	<body>
 		<MainNab />
 		<slot />
-	<Footer />
+		<Contact />
+		<Footer />
 
 	</body>
 </html>
